<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="false"
    android:isScrollContainer="false"
    tools:context=".RestorePasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/restore_background_view"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/restore_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/restore_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/arrow_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/arrow_back_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_black_28dp" />

        <ImageView
            android:id="@+id/restore_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_text"
            app:layout_constraintBottom_toTopOf="@+id/restore_company_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restore_background_view"
            app:srcCompat="@drawable/ic_eyeglasses" />

        <TextView
            android:id="@+id/restore_company_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/restore_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/restore_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/email_text"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/restore_user_email_edit_text"
            app:layout_constraintStart_toStartOf="@+id/restore_user_email_edit_text" />

        <EditText
            android:id="@+id/restore_user_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/example_email_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/restore_image_view2"
            app:layout_constraintTop_toTopOf="@+id/restore_guideline" />

        <ImageView
            android:id="@+id/restore_image_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/email_text"
            app:layout_constraintBottom_toBottomOf="@+id/restore_user_email_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restore_user_email_edit_text"
            app:srcCompat="@drawable/ic_email_28dp" />

        <View
            android:id="@+id/restore_view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/restore_user_email_edit_text"
            app:layout_constraintStart_toStartOf="@+id/restore_user_email_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/restore_user_email_edit_text" />

        <Button
            android:id="@+id/restore_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_button"
            android:text="@string/restore_password_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restore_view"
            app:layout_constraintVertical_bias="0.25" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>